--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,65 +1,69 @@
 <!--  MPD XML Starter code Semester B Session 2018 2019  -->
 <!-- Student Name: Ben Maxwell -->
 <!-- Student Number: S1917932 -->
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent" android:layout_height="fill_parent">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+<RelativeLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/main_activity"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+android:background="@drawable/main_activity" >
 
-        <!--<Button
-            android:id="@+id/startButton"
-            android:layout_width="204dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Refresh"
-            app:cornerRadius="50px" />-->
+    <!-- Custom Buttons -->
+    <ImageButton
+        android:id="@+id/startButton"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="5dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="5dp"
+        android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        android:padding="1dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_refresh_light" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+    <ImageButton
+        android:id="@+id/searchButton"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        android:padding="1dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_search_light"
+        android:visibility="visible" />
 
-            <ImageButton
-                android:id="@+id/startButton"
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="left"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="4dp"
-                android:adjustViewBounds="true"
-                android:background="@android:color/transparent"
-                android:padding="1dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_refresh"
-                android:visibility="visible" />
+    <!-- Quakes Header -->
+    <TextView
+        android:id="@+id/quakes"
+        android:layout_width="110dp"
+        android:layout_height="36dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="160dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="10dp"
+        android:text="Quakes"
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"
+        android:textSize="32sp"
+        android:lineHeight="33sp"
+        android:gravity="top"
+        />
 
-            <ImageButton
-                android:id="@+id/searchButton"
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="right"
-                android:layout_marginTop="4dp"
-                android:layout_marginRight="5dp"
-                android:adjustViewBounds="true"
-                android:background="@android:color/transparent"
-                android:padding="1dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_search"
-                android:visibility="visible" />
-        </LinearLayout>
-
-        <ListView
-            android:id="@+id/quakeList"
-            android:layout_width="match_parent"
-            android:layout_height="571dp" />
-
-        <TextView
-            android:id="@+id/acknowledgement"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="Contains British Geological Survey materials ©NERC 2019"/>
-    </LinearLayout>
-</ScrollView>
+    <!-- Earthquake List -->
+    <ListView
+        android:id="@+id/quakeList"
+        android:layout_width="390dp"
+        android:layout_height="592dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="70dp"
+        android:background="#FFF"/>
+</RelativeLayout>
