--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,95 +1,101 @@
 <!-- Student Name: Ben Maxwell -->
 <!-- Student Number: S1917932 -->
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="fill_parent" android:layout_height="fill_parent">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+<RelativeLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/main_activity"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent"
+android:background="@drawable/main_activity" >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+    <!-- Home Button -->
+    <ImageButton
+        android:id="@+id/homeButton"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="5dp"
+        android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        android:padding="1dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_previous_light"
+        android:visibility="visible" />
 
-            <ImageButton
-                android:id="@+id/homeButton"
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="left"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="4dp"
-                android:adjustViewBounds="true"
-                android:background="@android:color/transparent"
-                android:padding="1dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_previous"
-                android:visibility="visible" />
+    <ImageButton
+        android:id="@+id/endDate"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="215dp"
+        android:layout_marginTop="5dp"
+        android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        android:padding="1dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_calendar_light"
+        android:visibility="visible" />
 
-            <ImageButton
-                android:id="@+id/startDate"
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="right"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="4dp"
-                android:adjustViewBounds="true"
-                android:background="@android:color/transparent"
-                android:padding="1dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_calendar"
-                android:visibility="visible"/>
+    <ImageButton
+        android:id="@+id/startDate"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="89dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        android:padding="1dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_calendar_light" />
 
-            <TextView
-                android:layout_width="64dp"
-                android:layout_height="match_parent"
-                android:layout_marginTop="4dp"
-                android:text="Start Date"
-                android:textSize="20dp" />
+    <TextView
+        android:layout_width="64dp"
+        android:layout_height="60dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="145dp"
+        android:layout_marginTop="5dp"
+        android:text="Start Date"
+        android:textColor="#fff"
+        android:textSize="20dp" />
 
-            <ImageButton
-                android:id="@+id/endDate"
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="right"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="4dp"
-                android:adjustViewBounds="true"
-                android:background="@android:color/transparent"
-                android:padding="1dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_calendar"
-                android:visibility="visible"/>
+    <TextView
+        android:layout_width="64dp"
+        android:layout_height="60dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="65dp"
+        android:text="End Date"
+        android:textColor="#fff"
+        android:textSize="20dp" />
 
-            <TextView
-                android:layout_width="53dp"
-                android:layout_height="match_parent"
-                android:layout_marginTop="4dp"
-                android:layout_marginRight="5dp"
-                android:text="End Date"
-                android:textSize="20dp" />
+    <ImageButton
+        android:id="@+id/searchDate"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:adjustViewBounds="true"
+        android:background="@android:color/transparent"
+        android:padding="1dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_search_light"
+        android:visibility="visible" />
 
-            <ImageButton
-                android:id="@+id/searchDate"
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="right"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginRight="5dp"
-                android:adjustViewBounds="true"
-                android:background="@android:color/transparent"
-                android:padding="1dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_search"
-                android:visibility="visible"/>
-        </LinearLayout>
-
-        <ListView
-            android:id="@+id/quakeList"
-            android:layout_width="match_parent"
-            android:layout_height="585dp" />
-
-    </LinearLayout>
-</ScrollView>
+    <!-- Earthquake List -->
+    <ListView
+        android:id="@+id/quakeList"
+        android:layout_width="390dp"
+        android:layout_height="592dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="70dp"
+        android:background="#FFF"/>
+</RelativeLayout>
